# avmath

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENTS.md  DOC.md  LICENSE.txt  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
docs/: README.md  algebra.md  analysis.md  avmath-root.md  basic.md  documentation.md  getting-started.md
evmath/: __init__.py  geo.py
src/: tester.py
src/avmath/: __init__.py  algebra.py  algebra_old.py  ana.py  analysis.py  analysis_old.py  functions.py  geo.py  lina.py  version.py
src/avmath/core/: __init__.py  checks.py  constants.py  fraction.py  fractions.py  logics.py  matrices.py  numbers.py  roots.py  std_iterable.py  types.py  vectors.py
src/avmath/core/tests/: test_vectors.py
src/avmath/linalg/: __init__.py
src/evmath/: __init__.py
