[metadata]
name = avmath
version = 1.2.0
author = Camillo Ballandt
author_email = ballandt@protonmail.com
license = MIT
description = Avmath math module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ballandt/avmath
project_urls =
    Documentation = https://ballandt.github.io/docs/avmath.html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src